add: shadow-dom

--- a/shadow-dom/index.html
+++ b/shadow-dom/index.html
@@ -10,9 +10,17 @@
 </head>
 <style>
   /* html や bodyはstyleが両方に当たる */
+  html {
+    color: red;
+  }
+  body {
+    color: red;
+  }
+  * {
+    color: red;
+  }
   p {
     font-size: 40px;
-    color: red;
   }
 </style>
 
